v0.9.0: Improve the discovery system (#27)